styles.css
body {
	background-color: #fcf7f8;
	margin-top: 10px;
}

.container {
  background-color: #90c2e7;
  /*border: 2px solid #101935;*/
  border-radius: 10px;
  margin: auto;
  float: center;
  
}
#response {
  background-color: #4e8098;
  /*border: 2px solid #101935;*/
  border-radius: 10px;
  margin: auto;
  margin-top: 15px;
}

div[id^="clip"] {
  height: 83px;
  width: 160px;
  float: left;
/*  border: 3px solid #101935;*/
/*  border-radius: 10px;*/
  margin: 10px;
  align: center;
  cursor: move;
  background-color: #F2FDFF;
}

video {
  float: left;
  margin-top: 30px;
  text-align: center;
  /*border: 3px solid #101935;*/
  border-radius: 5px;
  
}

div[id^="answer"] {
  height: 87px;
  width: 164px;
  float: left;
  border: 2px solid #101935;
  /*border-radius: 5px;*/
  margin: 8px;
  align: center;
  background-color: #f3dfa2;
}

#responses.dim {
  -webkit-filter:brightness(50%);
  -moz-filter:brightness(50%);
  filter: url(#brightness);
  filter:brightness(50%);
}

img {
	height: 83px;
	width: 160px;
}

button {
	margin: 20px;
	margin-top: 40px;

}

#lessonScore, #current, #complete {
  color: #ffffff;
  font-family: 'Oxygen', sans-serif;
  font-size: 16px;
  padding-top: 10px;
  
}

.btn-danger {
  float: right;
  border-radius: 50px;
  background-color: #a31621;
  
}

